--- a/views/loginregistro.hbs
+++ b/views/loginregistro.hbs
@@ -35,7 +35,7 @@
                     <script>
         Swal.fire({
             icon: 'success',
-            title: 'Success!',
+            title: 'Todo Listo!',
             html: '<ul><li>{{messages.success_msg}}</li></ul>'
         });
     </script>
