--- a/views/index.hbs
+++ b/views/index.hbs
@@ -17,8 +17,8 @@
             <li><i class="fa fa-map-o"></i> Proyecto Final Bootcamp</li>
         </div>
         <div class="right-menu">
-            <li><a href="/users/login">Ingresar</a></li>
-            <li><a href="/users/registro">Registro</a></li>
+            <li><a href="/loginregistro">Ingresar</a></li>
+            
             <li><a href="/contacto">Contacto</a></li>
         </div>
     </header>
@@ -26,7 +26,7 @@
     <section class="landing">
         <h3>Proyecto Final Bootcamp Javascript</h3>
         <h4>Esteban Zúñiga</h4>
-        <div class="button" onclick="location.href='/users/login'">Entrar</div>
+        <div class="button" onclick="location.href='/loginregistro'">Entrar</div>
         <div class="background"></div>
     </section>
 </body>
