--- a/views/mapa.hbs
+++ b/views/mapa.hbs
@@ -1,64 +1,84 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>Mapa</title>
-<meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
-<link rel="stylesheet" href="css/carto.css">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <head>
+    <meta charset="utf-8">
+    <title>Mapa</title>
+    <meta name="viewport"
+      content="initial-scale=1,maximum-scale=1,user-scalable=no">
+    <link rel="stylesheet" href="css/carto.css">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous">
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
-<style>
+    <style>
 
 </style>
-</head>
-<body>
-    
+  </head>
+  <body>
+
     <div id="map"></div>
 
-      <!-- <button  class="button">Museoss</button> -->
-    <button id="location-btn" type="button" class="btn btn-primary btn-sm">Usar mi localización</button>
+    <!-- <button  class="button">Museoss</button> -->
+    <button id="location-btn" type="button" class="btn btn-primary btn-sm">Usar
+      mi localización</button>
     <div id="instructions"></div>
-    
+
     <div class="container">
-        <div class="row">
-          <div class="col"></div>
-          <nav class="navbar navbar-expand-lg bg-light col mt-4">
-            <div class="container-fluid">
-              <button class="navbar-toggler mx-auto pt-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <img src="https://img.icons8.com/external-flaticons-lineal-color-flat-icons/50/null/external-map-winter-travel-flaticons-lineal-color-flat-icons-2.png" alt="Toggler Icon" width="65px">
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-center">
-                  <li class="nav-item">
-                    <a class="nav-link" id="toggleMarkers">Museos</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" id="toggleMarkers2">Parques y Plazas</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" id="toggleMarkers3">Servicios</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#" onclick="showAlert(); event.preventDefault();">Salir</a>
-                  </li>
-                </ul>
-              </div>
+      <div class="row">
+        <div class="col"></div>
+        <nav class="navbar navbar-expand-lg bg-light col mt-4">
+          <div class="container-fluid">
+            <button class="navbar-toggler mx-auto pt-1" type="button"
+              data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent" aria-expanded="false"
+              aria-label="Toggle navigation">
+              <img
+                src="https://img.icons8.com/external-flaticons-lineal-color-flat-icons/50/null/external-map-winter-travel-flaticons-lineal-color-flat-icons-2.png"
+                alt="Toggler Icon" width="65px">
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-center">
+                <li class="nav-item">
+                  <a class="nav-link" id="toggleMarkers">Museos</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" id="toggleMarkers2">Parques y Plazas</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" id="toggleMarkers3">Servicios</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/profile">Perfil</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#" onclick="showAlert();
+                    event.preventDefault();">Salir</a>
+                </li>
+              </ul>
             </div>
-          </nav>
-          <div class="col"></div>
-        </div>
+          </div>
+        </nav>
+        <div class="col"></div>
       </div>
-   
-
-<link href="https://api.mapbox.com/mapbox-gl-js/v2.13.0/mapbox-gl.css" rel="stylesheet">    
-<script async defer src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.js'></script>
-<script async defer src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<script src="/js/admin.js"></script>
-<script src="/js/alerts.js"></script>
+    </div>
 
 
-</body>
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.13.0/mapbox-gl.css"
+      rel="stylesheet">
+    <script async defer
+      src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.js'></script>
+    <script async defer src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="/js/admin.js"></script>
+    <script src="/js/alerts.js"></script>
+
+
+  </body>
 </html>
