--- a/views/mantenedor2.hbs
+++ b/views/mantenedor2.hbs
@@ -95,7 +95,7 @@
                                     <div class="form-group">
                                         <label for="in_coordenadas">Coordenadas:</label>
                                         <input type="text" id="in_coordenadas" name="geom" class="form-control"
-                                            placeholder="Coordenadas" required>
+                                            placeholder="Coordenadas" required pattern="-?\d{1,3}\.\d{4},\s?-?\d{1,3}\.\d{4}" title="Please enter the coordinates in the format: -71.1234, -33.1234">
                                     </div>
                                     <div class="form-group">
                                         <label for="in_categoria">Categoria:</label>
@@ -170,7 +170,7 @@
                                     <div class="form-group">
                                         <label for="in_coordenadas">Coordenadas:</label>
                                         <input type="text" id="in_coordenadas" name="geom" class="form-control"
-                                            placeholder="Coordenadas" required>
+                                            placeholder="Coordenadas" required pattern="-?\d{1,3}\.\d{4},\s?-?\d{1,3}\.\d{4}" title="Please enter the coordinates in the format: -71.1234, -33.1234">
                                     </div>
                                     <div class="form-group">
                                         <label for="in_categoria">Categoria:</label>
