--- a/views/contacto.hbs
+++ b/views/contacto.hbs
@@ -10,6 +10,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
     <title>Contacto</title>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <script type="text/javascript">
         emailjs.init('vekMyWrD2bP6WfPCF')
@@ -23,8 +24,8 @@
             <li><i class="fa fa-map-o"></i> Proyecto Final Bootcamp</li>
         </div>
         <div class="right-menu">
-            <li><a href="/users/login">Ingresar</a></li>
-            <li><a href="/users/registro">Registro</a></li>
+            <li><a href="/loginregistro">Ingresar</a></li>
+            
             <li><a href="/">Inicio</a></li>
         </div>
     </header>
