--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -12,7 +12,7 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/"> {{ user.name
+          <a class="nav-link active" aria-current="page" > {{ user.name
             }}</a>
         </li>
         <li class="nav-item dropdown">
