--- a/views/error.hbs
+++ b/views/error.hbs
@@ -2,7 +2,7 @@
     <head>
     <meta charset="utf-8">
      <link rel="stylesheet" href="/css/error.css">
-    <title>Page Not Found :(</title>
+    <title>Página no encontrada :(</title>
         
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     </head>
@@ -17,9 +17,9 @@
         <div class="four-oh-four"><h1>404 Error</h1></div>
               
         <div class="warning">            
-            <h2>"All those moments will be lost in time, like tears in rain."</h2>
-            <p>The page you are looking for might have been removed, had its name changed, or is temporarily unavailable.</p>
-            <a href="javascript:history.back()">Please go back to the previous page</a>
+            <h2>"Todos esos momentos se perderán en el tiempo, como lágrimas en la lluvia."</h2>
+            <p>Es posible que la página que está buscando haya sido eliminada, haya cambiado de nombre o no esté disponible temporalmente.</p>
+            <a href="javascript:history.back()">Vuelva a la página anterior</a>
         </div>
 
         <div class="footer"><p class="copyright">&copy; 2013 Redfrost.com</p></div>        
