--- a/views/mantenedor2.hbs
+++ b/views/mantenedor2.hbs
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/stylesA.css">
     <script src="https://kit.fontawesome.com/9bf55c7eb1.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <title>Document</title>
+    <title>Mantenedor Ubicaciones</title>
 </head>
 
 <body>
@@ -124,8 +124,7 @@
 
                             </form>
                             <div class="btn-editar-modal">
-                                <!-- ESTE BOTON ES CREADO MEDIANTE SCRIPT (mainAdmin.js) -->
-                                <!-- <button class="btn btn-outline-warning" onclick="modificarProducto(id)">Modificar</button> -->
+                                
                             </div>
                         </div>
                     </div>
@@ -263,7 +262,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
-    <script src="/js/cards.js"></script>
+    
     <script>
         function editar(id) {
             const card = document.querySelector(`.producto${id}`);
