--- a/views/mantenedor2.hbs
+++ b/views/mantenedor2.hbs
@@ -21,34 +21,34 @@
     {{!-- Alertas --}}
 
     {{#if messages.success_msg}}
-                    <script>
+    <script>
         Swal.fire({
             icon: 'success',
             title: 'Listo!',
             html: '<ul><li>{{messages.success_msg}}</li></ul>'
         });
-        </script>
-        {{/if}}
-        
+    </script>
+    {{/if}}
+
     {{#if messages.success_msg2}}
-                    <script>
+    <script>
         Swal.fire({
             icon: 'success',
             title: 'Listo!',
             html: '<ul><li>{{messages.success_msg2}}</li></ul>'
         });
-        </script>
-        {{/if}}
+    </script>
+    {{/if}}
 
     {{#if messages.success_msg3}}
-                    <script>
+    <script>
         Swal.fire({
             icon: 'success',
             title: 'Listo!',
             html: '<ul><li>{{messages.success_msg3}}</li></ul>'
         });
-        </script>
-        {{/if}}    
+    </script>
+    {{/if}}
     <main>
 
         <div class="control-panel">
@@ -57,6 +57,12 @@
                 Crear Nueva Ubicación
             </button>
         </div>
+
+
+        <p style="text-align: center;">El orden de las coordenadas debe ser, primero Longuitud y luego Latitud, en
+            ese orden. Y con cuatro decimales luego del punto.</p>
+
+
 
         <!-- Modal Editar-->
         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -95,7 +101,9 @@
                                     <div class="form-group">
                                         <label for="in_coordenadas">Coordenadas:</label>
                                         <input type="text" id="in_coordenadas" name="geom" class="form-control"
-                                            placeholder="Coordenadas" required pattern="-?\d{1,3}\.\d{4},\s?-?\d{1,3}\.\d{4}" title="Please enter the coordinates in the format: -71.1234, -33.1234">
+                                            placeholder="Coordenadas" required
+                                            pattern="-?\d{1,3}\.\d{4},\s?-?\d{1,3}\.\d{4}"
+                                            title="Please enter the coordinates in the format: -71.1234, -33.1234">
                                     </div>
                                     <div class="form-group">
                                         <label for="in_categoria">Categoria:</label>
@@ -124,7 +132,7 @@
 
                             </form>
                             <div class="btn-editar-modal">
-                                
+
                             </div>
                         </div>
                     </div>
@@ -169,7 +177,9 @@
                                     <div class="form-group">
                                         <label for="in_coordenadas">Coordenadas:</label>
                                         <input type="text" id="in_coordenadas" name="geom" class="form-control"
-                                            placeholder="Coordenadas" required pattern="-?\d{1,3}\.\d{4},\s?-?\d{1,3}\.\d{4}" title="Please enter the coordinates in the format: -71.1234, -33.1234">
+                                            placeholder="Coordenadas" required
+                                            pattern="-?\d{1,3}\.\d{4},\s?-?\d{1,3}\.\d{4}"
+                                            title="Please enter the coordinates in the format: -71.1234, -33.1234">
                                     </div>
                                     <div class="form-group">
                                         <label for="in_categoria">Categoria:</label>
@@ -262,7 +272,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
-    
+
     <script>
         function editar(id) {
             const card = document.querySelector(`.producto${id}`);
